# SSII-InferenceEngine

./: CMakeLists.txt  LICENSE  README.md  main.cpp
includes/: Fact.h  FactBase.h  InferenceEngine.h  KnowledgeBase.h  Rule.h  Utils.h
sources/: Fact.cpp  FactBase.cpp  InferenceEngine.cpp  KnowledgeBase.cpp  Rule.cpp  Utils.cpp
test/: BC-3.txt  BH-3.txt
